added event listener to class container  and cleaned up some CSS

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/styles.css" />
+    <link rel="shortcut icon" href="#"> <!--Remove in production -->
     <title>DnD Character Creator</title>
   </head>
   <body>
@@ -99,191 +100,193 @@
           </div>
         </div>
       </div>
-      <fieldset class="skills-wrapper">
-        <ul>
-          <li>
-            <label
-              ><input
-                type="checkbox"
-                class="check"
-                value="acrobatics"
-                autocomplete="off"
-              />Acrobatics</label
-            >
-          </li>
-          <li>
-            <label
-              ><input
-                type="checkbox"
-                class="check"
-                value="animal handling"
-                autocomplete="off"
-              />Animal Handling</label
-            >
-          </li>
-          <li>
-            <label
-              ><input
-                type="checkbox"
-                class="check"
-                value="arcana"
-                autocomplete="off"
-              />Arcana</label
-            >
-          </li>
-          <li>
-            <label
-              ><input
-                type="checkbox"
-                class="check"
-                value="athletics"
-                autocomplete="off"
-              />Athletics</label
-            >
-          </li>
-          <li>
-            <label
-              ><input
-                type="checkbox"
-                class="check"
-                value="deception"
-                autocomplete="off"
-              />Deception</label
-            >
-          </li>
-          <li>
-            <label
-              ><input
-                type="checkbox"
-                class="check"
-                value="history"
-                autocomplete="off"
-              />History</label
-            >
-          </li>
-          <li>
-            <label
-              ><input
-                type="checkbox"
-                class="check"
-                value="insight"
-                autocomplete="off"
-              />Insight</label
-            >
-          </li>
-          <li>
-            <label
-              ><input
-                type="checkbox"
-                class="check"
-                value="intimidation"
-                autocomplete="off"
-              />Intimidation</label
-            >
-          </li>
-          <li>
-            <label
-              ><input
-                type="checkbox"
-                class="check"
-                value="investigation"
-                autocomplete="off"
-              />Investigation</label
-            >
-          </li>
-          <li>
-            <label
-              ><input
-                type="checkbox"
-                class="check"
-                value="medicine"
-                autocomplete="off"
-              />Medicine</label
-            >
-          </li>
-          <li>
-            <label
-              ><input
-                type="checkbox"
-                class="check"
-                value="nature"
-                autocomplete="off"
-              />Nature</label
-            >
-          </li>
-          <li>
-            <label
-              ><input
-                type="checkbox"
-                class="check"
-                value="perception"
-                autocomplete="off"
-              />Perception</label
-            >
-          </li>
-          <li>
-            <label
-              ><input
-                type="checkbox"
-                class="check"
-                value="performance"
-                autocomplete="off"
-              />Performance</label
-            >
-          </li>
-          <li>
-            <label
-              ><input
-                type="checkbox"
-                class="check"
-                value="persuasion"
-                autocomplete="off"
-              />Persuasion</label
-            >
-          </li>
-          <li>
-            <label
-              ><input
-                type="checkbox"
-                class="check"
-                value="religion"
-                autocomplete="off"
-              />Religion</label
-            >
-          </li>
-          <li>
-            <label
-              ><input
-                type="checkbox"
-                class="check"
-                value="slight of hand"
-                autocomplete="off"
-              />Slight of Hand</label
-            >
-          </li>
-          <li>
-            <label
-              ><input
-                type="checkbox"
-                class="check"
-                value="stealth"
-                autocomplete="off"
-              />Stealth</label
-            >
-          </li>
-          <li>
-            <label
-              ><input
-                type="checkbox"
-                class="check"
-                value="survival"
-                autocomplete="off"
-              />Survival</label
-            >
-          </li>
-        </ul>
-        <div class="remaining-prof">Proficiencies left: <span></span></div>
-      </fieldset>
+      <div class="skills-spells-wrapper">
+        <fieldset class="skills-wrapper">
+          <ul>
+            <li>
+              <label
+                ><input
+                  type="checkbox"
+                  class="check"
+                  value="acrobatics"
+                  autocomplete="off"
+                />Acrobatics</label
+              >
+            </li>
+            <li>
+              <label
+                ><input
+                  type="checkbox"
+                  class="check"
+                  value="animal handling"
+                  autocomplete="off"
+                />Animal Handling</label
+              >
+            </li>
+            <li>
+              <label
+                ><input
+                  type="checkbox"
+                  class="check"
+                  value="arcana"
+                  autocomplete="off"
+                />Arcana</label
+              >
+            </li>
+            <li>
+              <label
+                ><input
+                  type="checkbox"
+                  class="check"
+                  value="athletics"
+                  autocomplete="off"
+                />Athletics</label
+              >
+            </li>
+            <li>
+              <label
+                ><input
+                  type="checkbox"
+                  class="check"
+                  value="deception"
+                  autocomplete="off"
+                />Deception</label
+              >
+            </li>
+            <li>
+              <label
+                ><input
+                  type="checkbox"
+                  class="check"
+                  value="history"
+                  autocomplete="off"
+                />History</label
+              >
+            </li>
+            <li>
+              <label
+                ><input
+                  type="checkbox"
+                  class="check"
+                  value="insight"
+                  autocomplete="off"
+                />Insight</label
+              >
+            </li>
+            <li>
+              <label
+                ><input
+                  type="checkbox"
+                  class="check"
+                  value="intimidation"
+                  autocomplete="off"
+                />Intimidation</label
+              >
+            </li>
+            <li>
+              <label
+                ><input
+                  type="checkbox"
+                  class="check"
+                  value="investigation"
+                  autocomplete="off"
+                />Investigation</label
+              >
+            </li>
+            <li>
+              <label
+                ><input
+                  type="checkbox"
+                  class="check"
+                  value="medicine"
+                  autocomplete="off"
+                />Medicine</label
+              >
+            </li>
+            <li>
+              <label
+                ><input
+                  type="checkbox"
+                  class="check"
+                  value="nature"
+                  autocomplete="off"
+                />Nature</label
+              >
+            </li>
+            <li>
+              <label
+                ><input
+                  type="checkbox"
+                  class="check"
+                  value="perception"
+                  autocomplete="off"
+                />Perception</label
+              >
+            </li>
+            <li>
+              <label
+                ><input
+                  type="checkbox"
+                  class="check"
+                  value="performance"
+                  autocomplete="off"
+                />Performance</label
+              >
+            </li>
+            <li>
+              <label
+                ><input
+                  type="checkbox"
+                  class="check"
+                  value="persuasion"
+                  autocomplete="off"
+                />Persuasion</label
+              >
+            </li>
+            <li>
+              <label
+                ><input
+                  type="checkbox"
+                  class="check"
+                  value="religion"
+                  autocomplete="off"
+                />Religion</label
+              >
+            </li>
+            <li>
+              <label
+                ><input
+                  type="checkbox"
+                  class="check"
+                  value="slight of hand"
+                  autocomplete="off"
+                />Slight of Hand</label
+              >
+            </li>
+            <li>
+              <label
+                ><input
+                  type="checkbox"
+                  class="check"
+                  value="stealth"
+                  autocomplete="off"
+                />Stealth</label
+              >
+            </li>
+            <li>
+              <label
+                ><input
+                  type="checkbox"
+                  class="check"
+                  value="survival"
+                  autocomplete="off"
+                />Survival</label
+              >
+            </li>
+          </ul>
+          <div class="remaining-prof">Proficiencies left: <span></span></div>
+        </fieldset>
+      </div>
       <div class="dice-roll">
         <button id="roll">Roll!</button>
       </div>
