created the layout for the character creation form using CSS Grids. CSS Grids is more confusing than JavaScript

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/styles.css" />
-    <link rel="shortcut icon" href="#"> <!--Remove in production -->
+    <link rel="shortcut icon" href="#" />
+    <!--Remove in production -->
     <title>DnD Character Creator</title>
   </head>
   <body>
@@ -291,7 +292,80 @@
         <button id="roll">Roll!</button>
       </div>
     </div>
-    <div class="character-sheet"></div>
+    <div class="character-sheet">
+      <div class="character-sheet-container">
+        <div class="sheet__character-header">
+          <div class="sheet__character-name"></div>
+          <div class="sheet__character-definitions">
+            <div class="sheet__character-level"></div>
+            <div class="sheet__character-class"></div>
+            <div class="sheet__character-race"></div>
+            <div class="sheet__character-background"></div>
+            <div class="sheet__character-alignment"></div>
+            <div class="sheet__character-faction"></div>
+            <div class="sheet__character-exp"></div>
+            <div class="sheet__player-name"></div>
+          </div>
+        </div>
+        <div class="sheet__character-stats-total">
+          <div class="sheet__character-prof-pasper">
+            <div class="sheet__character-prof"></div>
+            <div class="sheet__character-pasper"></div>
+          </div>
+          <div class="sheet__character-savethrow">
+            <div class="sheet__character-savestr"></div>
+            <div class="sheet__character-savedex"></div>
+            <div class="sheet__character-savecon"></div>
+            <div class="sheet__character-saveint"></div>
+            <div class="sheet__character-savewis"></div>
+            <div class="sheet__character-savecha"></div>
+          </div>
+          <div class="sheet__character-skills">
+            <div class="sheet__character-acrobatics"></div>
+            <div class="sheet__character-anhandle"></div>
+            <div class="sheet__character-arcana"></div>
+            <div class="sheet__character-athletics"></div>
+            <div class="sheet__character-deception"></div>
+            <div class="sheet__character-history"></div>
+            <div class="sheet__character-insight"></div>
+            <div class="sheet__character-intimidation"></div>
+            <div class="sheet__character-investigation"></div>
+            <div class="sheet__character-medicine"></div>
+            <div class="sheet__character-nature"></div>
+            <div class="sheet__character-perception"></div>
+            <div class="sheet__character-performance"></div>
+            <div class="sheet__character-persuasion"></div>
+            <div class="sheet__character-religion"></div>
+            <div class="sheet__character-soh"></div>
+            <div class="sheet__character-stealth"></div>
+            <div class="sheet__character-survival"></div>
+          </div>
+          <div class="sheet__character-stats">
+            <div class="sheet__character-str"></div>
+            <div class="sheet__character-dex"></div>
+            <div class="sheet__character-con"></div>
+            <div class="sheet__character-int"></div>
+            <div class="sheet__character-wis"></div>
+            <div class="sheet__character-cha"></div>
+          </div>
+        </div>
+        <div class="sheet__character-ac-in-sp">
+          <div class="sheet__character-ac"></div>
+          <div class="sheet__character-init"></div>
+          <div class="sheet__character-speed"></div>
+        </div>
+        <div class="sheet__character-hp">
+          <div class="sheet__character-maxhp"></div>
+          <div class="sheet__character-curhp"></div>
+          <div class="sheet__character-hitdice-container">
+            <div class="sheet__character-hitdice"></div>
+            <div class="sheet__character-hitdice-max"></div>
+          </div>
+        </div>
+        <div class="sheet__character-weapons-items"></div>
+        <div class="sheet__character-spell-list"></div>
+      </div>
+    </div>
     <script src="js/app.js"></script>
   </body>
 </html>
