added some HTML structure for sheet names and a span that can have its innerHTML edited. Also created a function that lets me populate all these spans with one call. Some spans return undefined as they have not been created in the object yet

--- a/index.html
+++ b/index.html
@@ -18,42 +18,42 @@
               <li
                 class="draggable-element"
                 draggable="true"
-                data-value="strength"
+                data-value="Strength"
               >
                 Strength
               </li>
               <li
                 class="draggable-element"
                 draggable="true"
-                data-value="dexterity"
+                data-value="Dexterity"
               >
                 Dexterity
               </li>
               <li
                 class="draggable-element"
                 draggable="true"
-                data-value="constitution"
+                data-value="Constitution"
               >
                 Constitution
               </li>
               <li
                 class="draggable-element"
                 draggable="true"
-                data-value="intelligence"
+                data-value="Intelligence"
               >
                 Intelligence
               </li>
               <li
                 class="draggable-element"
                 draggable="true"
-                data-value="wisdom"
+                data-value="Wisdom"
               >
                 Wisdom
               </li>
               <li
                 class="draggable-element"
                 draggable="true"
-                data-value="charisma"
+                data-value="Charisma"
               >
                 Charisma
               </li>
@@ -68,22 +68,22 @@
           <div class="class-selector">
             <label for="class">Class</label>
             <select name="class" id="class" autocomplete="off">
-              <option value="wizard">Wizard</option>
-              <option value="barbarian">Barbarian</option>
+              <option value="Wizard">Wizard</option>
+              <option value="Barbarian">Barbarian</option>
             </select>
           </div>
           <div class="race-selector">
             <label for="race">Race</label>
             <select name="race" id="race" autocomplete="off">
-              <option value="tiefling">Tiefling</option>
-              <option value="dragonborn">Dragonborn</option>
+              <option value="Tiefling">Tiefling</option>
+              <option value="Dragonborn">Dragonborn</option>
             </select>
           </div>
           <div class="background-selector">
             <label for="background">Background</label>
             <select name="background" id="background" autocomplete="off">
-              <option value="criminal">Criminal</option>
-              <option value="sage">Sage</option>
+              <option value="Criminal">Criminal</option>
+              <option value="Sage">Sage</option>
             </select>
           </div>
           <div class="level-selector">
@@ -295,16 +295,34 @@
     <div class="character-sheet">
       <div class="character-sheet-container">
         <div class="sheet__character-header">
-          <div class="sheet__character-name"></div>
+          <div class="sheet__character-name">
+            <h1><span>Test Text</span></h1>
+          </div>
           <div class="sheet__character-definitions">
-            <div class="sheet__character-level"></div>
-            <div class="sheet__character-class"></div>
-            <div class="sheet__character-race"></div>
-            <div class="sheet__character-background"></div>
-            <div class="sheet__character-alignment"></div>
-            <div class="sheet__character-faction"></div>
-            <div class="sheet__character-exp"></div>
-            <div class="sheet__player-name"></div>
+            <div class="sheet__character-level">
+              <h1>Level: <span></span></h1>
+            </div>
+            <div class="sheet__character-class">
+              <h1>Class: <span></span></h1>
+            </div>
+            <div class="sheet__character-race">
+              <h1>Race: <span></span></h1>
+            </div>
+            <div class="sheet__character-background">
+              <h1>Background: <span></span></h1>
+            </div>
+            <div class="sheet__character-alignment">
+              <h1>Alignment: <span></span></h1>
+            </div>
+            <div class="sheet__character-faction">
+              <h1>Faction: <span></span></h1>
+            </div>
+            <div class="sheet__character-exp">
+              <h1>Exp: <span></span></h1>
+            </div>
+            <div class="sheet__player-name">
+              <h1>Player Name: <span></span></h1>
+            </div>
           </div>
         </div>
         <div class="sheet__character-stats-total">
