ran a similar function with the stat assignment. Possibly worth combining these two functions together, but maybe that's just trying too hard

--- a/index.html
+++ b/index.html
@@ -359,12 +359,36 @@
             <div class="sheet__character-survival"></div>
           </div>
           <div class="sheet__character-stats">
-            <div class="sheet__character-str"></div>
-            <div class="sheet__character-dex"></div>
-            <div class="sheet__character-con"></div>
-            <div class="sheet__character-int"></div>
-            <div class="sheet__character-wis"></div>
-            <div class="sheet__character-cha"></div>
+            <div class="sheet__character-strength">
+              <h1>Strength</h1>
+              <span>Bonus</span>
+              <span>Number</span>
+            </div>
+            <div class="sheet__character-dexterity">
+              <h1>Dexterity</h1>
+              <span>Bonus</span>
+              <span>Number</span>
+            </div>
+            <div class="sheet__character-constitution">
+              <h1>Constitution</h1>
+              <span>Bonus</span>
+              <span>Number</span>
+            </div>
+            <div class="sheet__character-intelligence">
+              <h1>Intelligence</h1>
+              <span>Bonus</span>
+              <span>Number</span>
+            </div>
+            <div class="sheet__character-wisdom">
+              <h1>Wisdom</h1>
+              <span>Bonus</span>
+              <span>Number</span>
+            </div>
+            <div class="sheet__character-charisma">
+              <h1>Charisma</h1>
+              <span>Bonus</span>
+              <span>Number</span>
+            </div>
           </div>
         </div>
         <div class="sheet__character-ac-in-sp">
