made a function that populates the skills

--- a/index.html
+++ b/index.html
@@ -339,24 +339,66 @@
             <div class="sheet__character-savecha"></div>
           </div>
           <div class="sheet__character-skills">
-            <div class="sheet__character-acrobatics"></div>
-            <div class="sheet__character-anhandle"></div>
-            <div class="sheet__character-arcana"></div>
-            <div class="sheet__character-athletics"></div>
-            <div class="sheet__character-deception"></div>
-            <div class="sheet__character-history"></div>
-            <div class="sheet__character-insight"></div>
-            <div class="sheet__character-intimidation"></div>
-            <div class="sheet__character-investigation"></div>
-            <div class="sheet__character-medicine"></div>
-            <div class="sheet__character-nature"></div>
-            <div class="sheet__character-perception"></div>
-            <div class="sheet__character-performance"></div>
-            <div class="sheet__character-persuasion"></div>
-            <div class="sheet__character-religion"></div>
-            <div class="sheet__character-soh"></div>
-            <div class="sheet__character-stealth"></div>
-            <div class="sheet__character-survival"></div>
+            <div class="sheet__character-acrobatics" data-value="acrobatics">
+              <h1>Acrobatics <span></span></h1>
+            </div>
+            <div class="sheet__character-anhandle" data-value="animal handling">
+              <h1>Animal Handling <span></span></h1>
+            </div>
+            <div class="sheet__character-arcana" data-value="arcana">
+              <h1>Arcana <span></span></h1>
+            </div>
+            <div class="sheet__character-athletics" data-value="athletics">
+              <h1>Athletics <span></span></h1>
+            </div>
+            <div class="sheet__character-deception" data-value="deception">
+              <h1>Deception <span></span></h1>
+            </div>
+            <div class="sheet__character-history" data-value="history">
+              <h1>History <span></span></h1>
+            </div>
+            <div class="sheet__character-insight" data-value="insight">
+              <h1>Insight <span></span></h1>
+            </div>
+            <div
+              class="sheet__character-intimidation"
+              data-value="intimidation"
+            >
+              <h1>Intimidation <span></span></h1>
+            </div>
+            <div
+              class="sheet__character-investigation"
+              data-value="investigation"
+            >
+              <h1>Investigation <span></span></h1>
+            </div>
+            <div class="sheet__character-medicine" data-value="medicine">
+              <h1>Medicine <span></span></h1>
+            </div>
+            <div class="sheet__character-nature" data-value="nature">
+              <h1>Nature <span></span></h1>
+            </div>
+            <div class="sheet__character-perception" data-value="perception">
+              <h1>Perception <span></span></h1>
+            </div>
+            <div class="sheet__character-performance" data-value="performance">
+              <h1>Performance <span></span></h1>
+            </div>
+            <div class="sheet__character-persuasion" data-value="persuasion">
+              <h1>Persuasion <span></span></h1>
+            </div>
+            <div class="sheet__character-religion" data-value="religion">
+              <h1>Religion <span></span></h1>
+            </div>
+            <div class="sheet__character-soh" data-value="slight of hand">
+              <h1>Slight of Hand <span></span></h1>
+            </div>
+            <div class="sheet__character-stealth" data-value="stealth">
+              <h1>Stealth <span></span></h1>
+            </div>
+            <div class="sheet__character-survival" data-value="survival">
+              <h1>Survival <span></span></h1>
+            </div>
           </div>
           <div class="sheet__character-stats">
             <div class="sheet__character-strength">
